@@ -40,6 +40,14 @@ Release 1.0 (in development)
 Release 0.6.3 (in development)
 ==============================
 
+* #210: Fix nesting of HTML tags for displayed math from pngmath
+  extension.
+
+* #213: Fix centering of images in LaTeX output.
+
+* #211: Fix compatibility with docutils 0.5.
+
+
 Release 0.6.2 (Jun 16, 2009)
 ============================
 
